# DII-Proyecto-Let-s-play-

./: README.md  doxygen.rar
AlgoG/: AlgoG.pro  Image1.qrc  Server.cpp  Server.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  thread.cpp  thread.h
BP_game/: BP_game.pro  backtracking.h  bp_settings.cpp  bp_settings.h  bp_settings.ui  bp_window.cpp  bp_window.h  bp_window.ui  gameover.cpp  gameover.h  gameover.ui  main.cpp  main.cpp.LbmgVs  mainwindow.cpp  mainwindow.h  mainwindow.ui  object.cpp  object.h  pathfinding.h  res.qrc  scene.cpp  scene.h  thread.cpp  thread.h
Mserver/: backtraking.cpp  client.h  dialog.cpp  dialog.h  json.cpp  json.h  main.cpp  memorymanager.cpp  memorymanager.h  message.cpp  message.h  mserver.cpp  mserver.h  mserver.pro  mserver.ui  pathfinding.cpp  pathfinding.h  server.cpp  server.h
ServerG2/: CMakeLists.txt  Codex.cpp  Codex.h  Memory.cpp  Memory.h  Server.cpp  Server.h  main.cpp
build-AlgoG-Desktop_Qt_5_15_2_MinGW_64_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  ui_mainwindow.h
build-AlgoG-Desktop_Qt_5_15_2_MinGW_64_bit-Debug/debug/: moc_mainwindow.cpp
build-BP_game-Desktop_Qt_5_15_2_GCC_64bit-Debug/: BP_game  Makefile  moc_bp_settings.cpp  moc_bp_window.cpp  moc_gameover.cpp  moc_mainwindow.cpp  moc_scene.cpp  moc_thread.cpp  qrc_res.cpp  ui_bp_settings.h  ui_bp_window.h  ui_gameover.h  ui_mainwindow.h
build-Interfaz-Qt-Desktop_Qt_5_15_2_GCC_64bit-Debug/: Makefile
